tests/invalid/const_string_not_supported.wio
fn Entry(args: string[]) -> i32 {
    const title: string = "wio";
    return 0;
}
